--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "bootstrap-vue": "^2.15.0",
     "core-js": "^3.6.5",
+    "js-yaml-loader": "^1.2.2",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0"
   },
