--- a/content/header.yaml
+++ b/content/header.yaml
@@ -1,3 +1,3 @@
 text: Let's get digytle!
-description: Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum
+description: Full life cycle—from birth to death—digital product agency and satelite services.
 button: Learn more
