--- a/content/what-we-do.yaml
+++ b/content/what-we-do.yaml
@@ -4,6 +4,7 @@ explanations:
 - text: Digital transformation
   description: Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et
   image: assets/Image 27.png
+  link: featurettes/learn-more.yaml
 - text: Digital products
   description: Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et
   image: assets/Image 27.png
