--- a/content/features.yaml
+++ b/content/features.yaml
@@ -1,8 +1,10 @@
 header-text: Featurettes
 header-description: Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet
-name1: Caterina Maniscalco
-description1: Caterina Maniscalco is a partner in a London consulting firm, with 20 years of experience across several industries in digital transformation and innovation.
-name2: Distributed Leadership
-description2: Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet
-name3: Coding for executives
-description3: Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet
+features:
+- name: Caterina Maniscalco
+  description: Caterina Maniscalco is a partner in a London consulting firm, with 20 years of experience across several industries in digital transformation and innovation.
+  link: learn-more
+- name: Distributed Leadership
+  description: Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet
+- name: Coding for executives
+  description: Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet
