--- a/content/what-we-do.yaml
+++ b/content/what-we-do.yaml
@@ -1,15 +1,19 @@
 header-text: What we do
 header-description: Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet
 explanations:
-- text: Digital transformation
+- number: "01"
+  text: Digital transformation
   description: Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et
   image: assets/Image 27.png
   link: featurettes/learn-more.yaml
-- text: Digital products
+- number: "02"
+  text: Digital products
   description: Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et
   image: assets/Image 27.png
-- text: Blits ChatBots
+- number: "03"
+  text: Blits ChatBots
   description: Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et
   image: assets/Image 27.png
-- text: Test Automation
+- number: "04"
+  text: Test Automation
   description: Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et
