Changed all images to be in the yaml files

--- a/content/header.yaml
+++ b/content/header.yaml
@@ -1,3 +1,4 @@
 text: Let's get digytle!
 description: Full life cycle—from birth to death—digital product agency and satelite services.
 button: Learn more
+image: assets/Image 24.png
