--- a/content/we-are.yaml
+++ b/content/we-are.yaml
@@ -1,2 +1,3 @@
 text: Who we are
 description: Digytle is an Aux company. Aux has been digitally transforming organisations for the last twenty years, originally specialising in digitising historic financial institutions, Aux carved out a successful niche in transforming ‘paper’ companies, not just to keep up with digital revolution but to help shape the future of their industries and set benchmarks for others to follow. In the years that followed Aux has delivered on-going projects across multiple industries including financial, automotive, healthcare, retail, and manufacturing.
+image: assets/
