--- a/content/featurettes/coding.yaml
+++ b/content/featurettes/coding.yaml
@@ -1,3 +1,4 @@
+image: ../assets/
 title: Coding for executives
 description: Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et 
 sections:
