Footer component was made of the design

--- a/content/footer.yaml
+++ b/content/footer.yaml
@@ -1,4 +1,4 @@
 privacy: Privacy policy
 contact: Contacts
 social: Social links
-copyright: Copyritght
+copyright: © 2020 Digytle. All rights reserved
