--- a/content/header.yaml
+++ b/content/header.yaml
@@ -1,4 +1,4 @@
 text: Let's get digytle!
-description: Full life cycle—from birth to death—digital product agency and satelite services.
+description: Full life cycle digital transformation and product agency.
 button: Learn more
 image: assets/Image 24.png
