--- a/content/what-we-do.yaml
+++ b/content/what-we-do.yaml
@@ -2,6 +2,11 @@ header-text: What we do
 header-description: Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet
 explanations:
 - number: "01"
+  text: Leadership Support
+  description: Digytle supports Leaders in the areas of Distributed Leadership, Digital Transformation, Digital Products, Talent Discovery and Development.
+  image: assets/Image 27.png
+  link: featurettes/learn-more.yaml
+- number: "01"
   text: Digital transformation
   description: Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et
   image: assets/Image 27.png
