--- a/content/what-we-do.yaml
+++ b/content/what-we-do.yaml
@@ -1,5 +1,5 @@
 header-text: What we do
-header-description: Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet
+header-description: Digytle is a digital consultancy and delivery organisation which spans the full spectrum from leadership and management to full digital product lifecycle.
 explanations:
 - number: "01"
   text: Leadership
