--- a/content/what-we-do.yaml
+++ b/content/what-we-do.yaml
@@ -21,4 +21,4 @@ explanations:
   image: assets/Image 27.png
 - number: "04"
   text: Test Automation
-  description: Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et
+  description: Comprehensive test automation.
