--- a/content/header.yaml
+++ b/content/header.yaml
@@ -1,4 +1,3 @@
-text: Let's get digytle!
-description: Full life cycle digital transformation and product agency.
-button: Learn more
-image: assets/Image 24.png
+text: Digital transformation and design agency
+description: Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum
+image: assets/rocket.png
