Last part of DesignPage

--- a/content/design.yaml
+++ b/content/design.yaml
@@ -13,7 +13,10 @@ faces:
   name: Eliana Tsiparova
   position: UI/UX Designer
   text: DESCRIPTION TEXT Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.
-
+work:
+- question: Are you interested in working with us?
+  text: Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam
+  button: Book a consultation
 sections:
 - title: "MKB Financiering: finance your business with ease"
   description: DESCRIPTION TEXT Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et 
