--- a/content/header.yaml
+++ b/content/header.yaml
@@ -1,4 +1,4 @@
-text: Let's get digytle!
-description: Full life cycle digital transformation and products agency.
+text: Digital Products, Transformation and Design
+description: Lipsum dipsum dopsum Lipsum dipsum dopsum Lipsum dipsum dopsum Lipsum dipsum dopsum Lipsum dipsum dopsum Lipsum dipsum dopsum
 button: Learn more
 image: assets/rocket.png
