--- a/content/featurettes/learn-more.yaml
+++ b/content/featurettes/learn-more.yaml
@@ -18,4 +18,4 @@ books:
 - text: Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam
 - image: ../assets/amazon.png
 - button: Buy me!
-- link:
+- link: /
