--- a/content/featurettes/learn-more.yaml
+++ b/content/featurettes/learn-more.yaml
@@ -11,11 +11,11 @@ sections:
   image: ../assets/Caterina_book.png
 quote:
 - bigQuotes: ../assets/big_quotes.svg
-- text: "Empower your senior team members: you can’t do it all, and you owe it to yourself as well as the team members that work for you to give them a chance to spread their wings and take on additional responsibility that — should their own careers progress — they will need to take on eventually themselves."
-- smallQuotes: ../assets/small_quotes.svg
+  text: "Empower your senior team members: you can’t do it all, and you owe it to yourself as well as the team members that work for you to give them a chance to spread their wings and take on additional responsibility that — should their own careers progress — they will need to take on eventually themselves."
+  smallQuotes: ../assets/small_quotes.svg
 books:
 - question: Would you like to get a copy of this book?
-- text: Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam
-- image: ../assets/amazon.png
+  text: Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam
+  image: ../assets/amazon.png
 button: Buy me!
 link: /
