--- a/content/header.yaml
+++ b/content/header.yaml
@@ -1,4 +1,4 @@
 text: Digital Products, Transformation and Design
-description: Lipsum dipsum dopsum Lipsum dipsum dopsum Lipsum dipsum dopsum Lipsum dipsum dopsum Lipsum dipsum dopsum Lipsum dipsum dopsum
+description: We believe what you believe and we stay with you to the bitter end.
 button: Learn more
 image: assets/rocket.png
