--- a/content/latest-work.yaml
+++ b/content/latest-work.yaml
@@ -1,5 +1,5 @@
 header-text: Latest Work
-header-description: Long trail of project will bore us to describe and you to listen. Here are several of the last victories.
+header-description: Long trail of project will bore us to describe and you to listen. Here are several of the latest victories.
 title: Title
 firstImage: assets/blits.png
 secondImage: assets/Asset 8-100.png
