--- a/content/features.yaml
+++ b/content/features.yaml
@@ -5,8 +5,8 @@ features:
   description: Caterina Maniscalco is a partner in a London consulting firm, with 20 years of experience across several industries in digital transformation and innovation.
   image: assets/Caterina_AboutPage.png
   link: learn-more
-- name: Distributed Leadership
-  description: Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet
+- name: Distributed Leadership and Digital Innovation
+  description: A book before its time: Distributed Leadership and Digital Innovation is even more current now, when we are locked away and cannot meet, but has power to carry you beyond.
   image: assets/41v5mLXBRaL.png
   link: leadership
 - name: Scratch for Executives
