--- a/content/features.yaml
+++ b/content/features.yaml
@@ -6,10 +6,10 @@ features:
   image: assets/Caterina_AboutPage.png
   link: learn-more
 - name: Distributed Leadership and Digital Innovation
-  description: A book before its time: Distributed Leadership and Digital Innovation is even more current now, when we are locked away and cannot meet, but has power to carry you beyond.
+  description: 'A book before its time: Distributed Leadership and Digital Innovation is even more current now, when we are locked away and cannot meet, but has power to carry you beyond.'
   image: assets/41v5mLXBRaL.png
   link: leadership
 - name: Scratch for Executives
-  description: Software developers are required to think business, but can Executives think code? In between one and three fun sessions, Scratch for Executives will help you open your mind and reach the Holy Graal of collaboration: empathy.
+  description: 'Software developers are required to think business, but can Executives think code? In between one and three fun sessions, Scratch for Executives will help you open your mind and reach the Holy Graal of collaboration: empathy.'
   image: assets/maxresdefault.png
   link: coding
