--- a/content/what-we-do.yaml
+++ b/content/what-we-do.yaml
@@ -1,6 +1,6 @@
 sections:
-- header: Digital transformation
-  description: Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
+- header: Digital Transformation
+  description: Digital products are preceded by digital transformation. Digital transformation includes paradigm shift, organisational change and market re-positioning. Digytle helps w/ all three.
   background: /assets/background_blue.svg
   image:
 - header: Digital Products
