--- a/content/footer.yaml
+++ b/content/footer.yaml
@@ -1,5 +1,5 @@
 location: /assets/location-point.svg
-address: 699 Dee Camp North Alexanderburgh, Buckinghamshire
+address: 241 Hertingfordbury Road, Hertingfordbury, SG14 2LB
 contactsImage: /assets/contacts.svg
 contacts: 
 -  charliecox@digytle.com
