--- a/content/what-we-do.yaml
+++ b/content/what-we-do.yaml
@@ -1,17 +1,17 @@
 sections:
 - header: Digital Transformation
-  description: Digital products are preceded by digital transformation. Digital transformation includes paradigm shift, organisational change and market re-positioning. Digytle helps w/ all three.
+  description: Digytle enables your businesses to harness the best technology to transform your processes and services. To digitally transform means a paradigm shift, organisational change and market re-positioning. Digytle can help you achieve all three.
   background: /assets/background_blue.svg
   image:
 - header: Digital Products
   description: Digytle delivers full set of services related to Digital Products including fitness for purpose, competitiveness and robustness.
   background: /assets/background_grey.svg
   image:
-- header: Blits Chat Bot Management Platform
+- header: Chat Bot Management Platform
   description: Blits is one of the most advanced Chat Bot Management Platforms. Blits allows you to connect to any Natural Language Processing Engine, so that you can choose the best for your case (language, subject matter, etc.). And then connects to your complete IT Landscape, in order to enable full bi-directional service of your customers.
   background: /assets/background_offwhite.svg
   image: /assets/blits_bots.png
-- header: AUXTA Deep Automated Quality Assurance
+- header: Testing Automation Platform
   description: AUXTA performs Deep Automated Quality Assurance of your online or mobile application. It can perform 10s of 1000s of steps every hour, imitating human visitor, and comparing the result fixed or dynamic values. AUXTA performs compliance supervision such as European Securities and Markets Authority (ESMA) monitoring.
   background: /assets/background_white.svg
   image: /assets/auxta.png
