--- a/content/header.yaml
+++ b/content/header.yaml
@@ -2,3 +2,4 @@ text: Digital Products, Transformation and Design
 description: We believe what you believe and we stay with you to the bitter end.
 button: Learn more
 image: assets/rocket.png
+arrow: assets/arrow_down.svg
