--- a/content/footer.yaml
+++ b/content/footer.yaml
@@ -6,5 +6,7 @@ contacts:
 - t.e.shaw@digytle.com
 privacy: Privacy policy
 copyright: © 2020 Digytle. All rights reserved
+twitter: /assets/twitter_image.svg
+linkedin: /assets/linkedin_image.svg
 
 
