Fixed console errors

--- a/content/design.yaml
+++ b/content/design.yaml
@@ -38,4 +38,4 @@ work:
 - question: Are you interested in working with us?
   text: Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam
   button: Book a consultation
-  link: /featurette/learn-more
+  link: 
