--- a/content/footer.yaml
+++ b/content/footer.yaml
@@ -2,11 +2,9 @@ location: /assets/location-point.svg
 address: 241 Hertingfordbury Road, Hertingfordbury, SG14 2LB
 contactsImage: /assets/contacts.svg
 contacts: 
-- charliecox@digytle.com
+- cc@digytle.com
 - t.e.shaw@digytle.com
 privacy: Privacy policy
-copyright: © 2020 Digytle. All rights reserved
+copyright: © 2020-2021 Digytle. All rights reserved
 twitter: /assets/twitter_image.svg
 linkedin: /assets/linkedin_image.svg
-
-
