--- a/content/design.yaml
+++ b/content/design.yaml
@@ -59,3 +59,4 @@ work:
   text: Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam
   button: Book a consultation
   link: /
+background: /assets/background_with_us.png
