--- a/content/navigation.yaml
+++ b/content/navigation.yaml
@@ -1,4 +1,5 @@
-logo-text: Digytle
+logoBlack: /assets/logo_black.svg
+logoWhite: /assets/logo_white.svg
 firstComponent: HOME
 secondComponent: WHO WE ARE
 thirdComponent: WHAT WE DO
