--- a/content/we.yaml
+++ b/content/we.yaml
@@ -6,7 +6,7 @@ description: >
              Between them they have worn every hat imaginable in web and software
              development and have been digitally transforming things for over 50 years.
              Starting in 2001 T.E. Shaw built the Aux Group using a radical approach of
-             'talent scouting nurseries' which has seen it grow into a successful, trusted and award winning digital
+             talent scouting & nurseries which has seen it grow into a successful, trusted and award winning digital
              development house with clients including KPMG and ****. It has offices in Dundee (Scotland),
              London (England), Amsterdam, Rotterdam and Delft (The Netherlands), Darmstadt and Müncich (Germany and
              Sofia (Bulgaria) and specialises in cutting edge technology and digital products in the FinTech, RegTech and GeoSpacial
