--- a/content/we.yaml
+++ b/content/we.yaml
@@ -8,7 +8,8 @@ description: >
              
              Starting in 2001 T.E. Shaw built the Aux Group using a radical approach of
              talent scouting & nurseries which has seen it grow into a successful, trusted and award winning digital
-             development house with clients including KPMG and ****. It has offices in Dundee (Scotland),
+             development house with clients including central and retail banks, investment funds,
+             the Big Four and more. It has offices in Dundee (Scotland),
              London (England), Amsterdam, Rotterdam and Delft (The Netherlands), Darmstadt and Müncich (Germany and
              Sofia (Bulgaria) and specialises in cutting edge technology and digital products in the FinTech, RegTech and GeoSpacial
              areas of expertise.
