--- a/content/features.yaml
+++ b/content/features.yaml
@@ -14,5 +14,5 @@ features:
 - name: Scratch for Executives
   description: 'Software developers are required to think business, but can Executives think code? In between one and three fun sessions, Scratch for Executives will help you open your mind and reach the Holy Graal of collaboration: empathy.'
   image: assets/maxresdefault.png
-  template: featurettes
+  template: person
   link: scratch-for-executives
