--- a/content/header.yaml
+++ b/content/header.yaml
@@ -1,5 +1,5 @@
 text: Digital Products, Transformation and Design
-description: We believe what you believe and we stay with you to the bitter end.
+description: We develop, transform and inspire to help you take off.
 button: Learn more
 image: assets/rocket.png
 arrow: assets/arrow_down.svg
