--- a/content/header.yaml
+++ b/content/header.yaml
@@ -1,5 +1,5 @@
 text: Digital Products, Transformation and Design
-description: We develop, transform and inspire to help you take off.
+description: Transforming Ideas Into Reality and Companies Into the Future
 button: Learn more
 image: assets/rocket.png
 arrow: assets/arrow_down.svg
