--- a/content/we.yaml
+++ b/content/we.yaml
@@ -1,4 +1,4 @@
-title: Who are we?
+title: We Build The Future
 text:
   - >
     Digytle is a partnership between Charlie Cox and T. E. Shaw, and backed by the Aux Group.
