--- a/content/design/blits.yaml
+++ b/content/design/blits.yaml
@@ -10,6 +10,11 @@ sections:
   subDescription: DESCRIPTION TEXT Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et 
   image: /assets/mkb_pc_image.png
   tools: Tools
+# incons: Tools
+#   - image: ...
+#   - image: ...
+#   - image: ...
+#
   xdImage: /assets/xd_image.png
   aiImage: /assets/ai_image.png
   button: Go to website
