--- a/content/featurettes/scratch-for-executives.yaml
+++ b/content/featurettes/scratch-for-executives.yaml
@@ -4,10 +4,9 @@ description: 'Software developers are required to think business, but can Execut
 sections:
 - description:
     - >
-       'If you are a manager in a digital project, you have to do w/ developers: directly or indirectly. The nature of digital products: SOFTware, present a specific challenge: intrinsic discipline and intrinsic respect for structure.' 
+       If you are a manager in a digital project, you have to do w/ developers: directly or indirectly. The nature of digital products: SOFTware, presents a specific challenge: intrinsic discipline and intrinsic respect for structure.
     - >
-       At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
-       Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy
+       This means, that w/o structure and discipline, a digital product is v easy to violate, which can break the quality: fitness for purpose, competitiveness and robustness.
   image: ../assets/
 - description:
     - >
